--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/QuickMathv2
 excludes=
 file.reference.mysql-connector-j-9.1.0.jar=D:\\INTI\\sem 5\\PRG3201\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
+file.reference.mysql-connector-j-9.1.0.jar-1=mysql-connector-j-9.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-9.1.0.jar}
+    ${file.reference.mysql-connector-j-9.1.0.jar}:\
+    ${file.reference.mysql-connector-j-9.1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
